package edu.fiuba.algo3.modelo;


interface Lapiz {

   void dibujar(int[] posicion);

}
